Paginación en endpoint store añadida
